@@ -6,6 +6,13 @@
 
                                   Changelog
 
+Daniel Stenberg (25 May 2009)
+- bug report #2796358 (http://curl.haxx.se/bug/view.cgi?id=2796358) pointed
+  out that the cookie parser would leak memory when it parses cookies that are
+  received with domain, path etc set multiple times in the same header. While
+  such a cookie is questionable, they occur in the wild and libcurl no longer
+  leaks memory for them. I added such a header to test case 8.
+
 Daniel Fandrich (22 May 2009)
 - Removed some obsolete digest code that caused a valgrind error in test 551.
 
